--- a/eks-deploy-from-ecr.yaml
+++ b/eks-deploy-from-ecr.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 776841820080.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo
+        image: 776841820080.dkr.ecr.us-east-1.amazonaws.com/my-springboot-app:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
